[gd_scene load_steps=7 format=3 uid="uid://chmlxbki13xwb"]

[ext_resource type="Script" path="res://scripts/oil_spill.gd" id="1_4muix"]
[ext_resource type="Texture2D" uid="uid://dhumrjjqf7prp" path="res://assets/images/oilspill.png" id="1_afqiq"]

[sub_resource type="Animation" id="Animation_f403d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xlx12"]
resource_name = "spawn"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rkaa"]
_data = {
"RESET": SubResource("Animation_f403d"),
"spawn": SubResource("Animation_xlx12")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycum7"]
size = Vector2(8, 64)

[node name="OilSpill" type="Area2D"]
position = Vector2(1, 0)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_4muix")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_afqiq")
centered = false
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
libraries = {
"": SubResource("AnimationLibrary_3rkaa")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 32)
shape = SubResource("RectangleShape2D_ycum7")
disabled = true

[node name="FireTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
